# rag-chatbot-govassist

./: .env  .gitattributes  .gitgnore  README.md  api_key  app.py  gemini_model_results.txt  pyproject.toml  requirements.txt
backend/: app.py
data/json_data/: ssa_disability_structured.json  ssa_family_structured.json  ssa_retirement_structured.json  ssa_ssi_structured.json  ssa_survivor_structured.json
data/text_data/: ssa_faq.txt
data/vector_store/235cca37-ae4e-4fdd-aa71-1baf1dccae3b/: index_metadata.pickle
frontend/: app.py
notebook/: document.ipynb
notebook/.ipynb_checkpoints/: document-checkpoint.ipynb
src/: chat_manager.py  data_loader.py  embedding.py  search.py  vectorstore.py
tools/: __init__.py  web_search.py
